--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
         ports:
             - "3308:3306"
         volumes:
-            - "./mysql/sass.sql:/docker-entrypoint-initdb.d/init.sql"
+            - "./mysql/init.sql:/docker-entrypoint-initdb.d/init.sql"
         networks:
             - code-network    
 
